fix:사용자선택추천API 음식카테고리 선택 분류 추ã가